--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                     <li><a href="./login.html">Login/Sinup</a></li>
                     <li><a href="./faqs.html">FAQs</a></li>
                     <li><a href="./terms-policy.html">Terms & Conditions</a></li>
+                    <li><a href="./dasbroad.html">Dashboard </a></li>
                 </ul>
             </nav>
         </div>
