--- a/dasbroad.html
+++ b/dasbroad.html
@@ -494,7 +494,7 @@ footer .view-all {
       <div class="carousel">
         <div class="carousel-track">
           <div class="category-card">
-            <img src="../assert/pest-control.jpg" alt="Pest Control">
+            <img src="./assert/pest-control.jpg" alt="Pest Control">
             <p>Pest Control/Disinfection Services</p>
           </div>
           <div class="category-card">
